--- a/CV/css/style.css
+++ b/CV/css/style.css
@@ -41,7 +41,7 @@ footer{
     width: 320;
     height: 320;
 }
-.fab{
-    color: gray;
-    font-size: 40px;
+#redsocial{
+    color: grey;
+    font-size: 60px;
 }
